[package]
name = "pinecrest-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.5.17"
axum-prometheus = "^0.1.0"
cached = "0.40.0"
chrono = "0.4.22"
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2.0"
scraper = "0.13.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "^0.3.4", features = ["cors"] }
